--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "configured-vite-project",
+    "name": "auth-frontend-core",
     "private": true,
     "version": "0.0.0",
     "type": "module",
@@ -20,13 +20,13 @@
         }
     },
     "dependencies": {
-        "@commitlint/config-conventional": "^19.6.0",
-        "lint-staged": "^15.2.11",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^7.1.1"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
+        "@commitlint/config-conventional": "^19.6.0",
         "@eslint/js": "^9.15.0",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
@@ -38,6 +38,7 @@
         "eslint-plugin-react-refresh": "^0.4.14",
         "globals": "^15.12.0",
         "husky": "^9.1.7",
+        "lint-staged": "^15.2.11",
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.16",
         "vite": "^6.0.1"
