--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
         }
     },
     "dependencies": {
+        "@mantine/core": "^7.15.3",
+        "@mantine/hooks": "^7.15.3",
+        "@mantine/modals": "^7.15.3",
+        "@mantine/notifications": "^7.15.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^7.1.1"
@@ -40,6 +44,8 @@
         "husky": "^9.1.7",
         "lint-staged": "^15.2.11",
         "postcss": "^8.4.49",
+        "postcss-preset-mantine": "^1.17.0",
+        "postcss-simple-vars": "^7.0.1",
         "tailwindcss": "^3.4.16",
         "vite": "^6.0.1"
     }
