--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
         "@mantine/hooks": "^7.15.3",
         "@mantine/modals": "^7.15.3",
         "@mantine/notifications": "^7.15.3",
+        "@tabler/icons-react": "^3.28.1",
+        "@tanstack/react-query": "4",
+        "axios": "^1.7.9",
+        "iconsax-react": "^0.0.8",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^7.1.1"
