--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
         "iconsax-react": "^0.0.8",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^7.1.1"
+        "react-hook-form": "^7.54.2",
+        "react-router-dom": "^7.1.1",
+        "zustand": "^5.0.3"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
