--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@mantine/notifications": "^7.15.3",
         "@tabler/icons-react": "^3.28.1",
         "@tanstack/react-query": "4",
+        "@tanstack/react-router": "^1.95.6",
         "axios": "^1.7.9",
         "iconsax-react": "^0.0.8",
         "react": "^18.3.1",
