--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@tanstack/react-router": "^1.95.6",
         "axios": "^1.7.9",
         "iconsax-react": "^0.0.8",
+        "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.54.2",
