--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@mantine/core": "^7.15.3",
+        "@mantine/dates": "^7.16.0",
         "@mantine/hooks": "^7.15.3",
         "@mantine/modals": "^7.15.3",
         "@mantine/notifications": "^7.15.3",
@@ -28,6 +29,8 @@
         "@tanstack/react-query": "4",
         "@tanstack/react-router": "^1.95.6",
         "axios": "^1.7.9",
+        "date-fns": "^4.1.0",
+        "dayjs": "^1.11.13",
         "iconsax-react": "^0.0.8",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
