--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "date-fns": "^4.1.0",
         "dayjs": "^1.11.13",
         "iconsax-react": "^0.0.8",
+        "lucide-react": "^0.475.0",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
