--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@mantine/hooks": "^7.15.3",
         "@mantine/modals": "^7.15.3",
         "@mantine/notifications": "^7.15.3",
+        "@mantine/nprogress": "^7.17.0",
         "@tabler/icons-react": "^3.28.1",
         "@tanstack/react-query": "4",
         "@tanstack/react-router": "^1.95.6",
