--- a/package.json
+++ b/package.json
@@ -20,21 +20,23 @@
         }
     },
     "dependencies": {
-        "@mantine/core": "^7.15.3",
+        "@mantine/core": "^7.17.0",
         "@mantine/dates": "^7.16.0",
-        "@mantine/hooks": "^7.15.3",
+        "@mantine/hooks": "^7.17.0",
         "@mantine/modals": "^7.15.3",
         "@mantine/notifications": "^7.15.3",
         "@tabler/icons-react": "^3.28.1",
         "@tanstack/react-query": "4",
         "@tanstack/react-router": "^1.95.6",
         "axios": "^1.7.9",
+        "chart.js": "^4.4.8",
         "date-fns": "^4.1.0",
         "dayjs": "^1.11.13",
         "iconsax-react": "^0.0.8",
         "lucide-react": "^0.475.0",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
+        "react-chartjs-2": "^5.3.0",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.54.2",
         "react-router-dom": "^7.1.1",
