--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         }
     },
     "dependencies": {
+        "@mantine/charts": "^7.17.1",
         "@mantine/core": "^7.17.0",
         "@mantine/dates": "^7.16.0",
         "@mantine/hooks": "^7.17.0",
