--- a/package.json
+++ b/package.json
@@ -30,19 +30,25 @@
         "@tanstack/react-query": "4",
         "@tanstack/react-router": "^1.95.6",
         "axios": "^1.7.9",
+        "chart.js": "^4.4.8",
         "date-fns": "^4.1.0",
         "dayjs": "^1.11.13",
+        "file-saver": "^2.0.5",
         "iconsax-react": "^0.0.8",
         "jwt-decode": "^4.0.0",
         "lucide-react": "^0.475.0",
         "moment-timezone": "^0.5.47",
         "prop-types": "^15.8.1",
         "react": "^18.3.1",
+        "react-chartjs-2": "^5.3.0",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.54.2",
+        "react-icons": "^5.5.0",
         "react-router-dom": "^7.1.1",
         "recharts": "^2.15.1",
         "socket.io-client": "^4.8.1",
+        "xlsx": "^0.18.5",
+        "xlsx-js-style": "^1.2.0",
         "zustand": "^5.0.3"
     },
     "devDependencies": {
