--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         }
     },
     "dependencies": {
+        "@mantine/charts": "^7.17.1",
         "@mantine/core": "^7.15.3",
         "@mantine/dates": "^7.16.0",
         "@mantine/hooks": "^7.15.3",
@@ -39,6 +40,7 @@
         "react-hook-form": "^7.54.2",
         "react-router-dom": "^7.1.1",
         "socket.io-client": "^4.8.1",
+        "xlsx": "^0.18.5",
         "zustand": "^5.0.3"
     },
     "devDependencies": {
