--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         }
     },
     "dependencies": {
+        "@google/generative-ai": "^0.24.0",
         "@mantine/charts": "^7.17.1",
         "@mantine/core": "^7.15.3",
         "@mantine/dates": "^7.16.0",
