--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@google/generative-ai": "^0.24.0",
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
+        "@google/generative-ai": "^0.24.0",
         "@mantine/charts": "^7.17.1",
         "@mantine/core": "^7.15.3",
         "@mantine/dates": "^7.16.0",
