--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "dependencies": {
         "@google/generative-ai": "^0.24.0",
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
         "@mantine/charts": "^7.17.1",
         "@mantine/core": "^7.15.3",
         "@mantine/dates": "^7.16.0",
@@ -28,6 +30,8 @@
         "@mantine/modals": "^7.15.3",
         "@mantine/notifications": "^7.15.3",
         "@mantine/nprogress": "^7.17.0",
+        "@mui/icons-material": "^6.4.7",
+        "@mui/material": "^6.4.7",
         "@tabler/icons-react": "^3.28.1",
         "@tanstack/react-query": "4",
         "@tanstack/react-router": "^1.95.6",
